<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="share_the_app">Share the app</string>
    <string name="write_to_support">Write to support</string>
    <string name="user_agreement">User Agreement</string>
    <string name="shared_text_in_button_share_apk" translatable="false">https://practicum.yandex.com/referrals/?ref_code=gAAAAABnbPrwIweaLt2TqMXmAy49d1WNBIm9ODIZnS5FQl6r0Sg-BF0xyYxKFZaGHsxb5RqDTzWzGcg17SP31WC0GNpQwjvzuw%3D%3D</string>
    <string name="title_share_screen_in_button_share_apk">Share with:</string>
    <string name="recipient_email_in_button_write_to_support" translatable="false">vital.kava@yandex.by</string>
    <string name="subject_in_button_write_to_support">Message to the developers of the Playlist Maker app</string>
    <string name="message_in_button_write_to_support">Thanks to the developers for a cool app!</string>
    <string name="url_in_button_arrow_forward" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="back">Back</string>
    <string name="clear_input_field">Clear input field</string>
    <string name="album_cover">Album cover</string>
    <string name="dot_separator">Dot separator</string>
    <string name="arrow_forward">Arrow forward</string>
    <string name="no_results">Sad smiley face image in music note symbol icon</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_internet">Connection problems\n\nDownload failed. Check your internet connection</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet_content_description">Image of crossed out WI-FI icon in music note symbol</string>
    <string name="search_history">You searched</string>
    <string name="clear_history">Clear history</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="media_library">Medialibrary</string>
    <string name="library_is_empty">Your medialibrary is empty</string>
    <string name="no_playlists">You haven\'t created\nany playlists yet</string>
    <string name="new_playlist">New playlist</string>
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="playlists">Playlists</string>
    <string name="name_star">Name*</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="complete_playlist_creation_question">Complete playlist creation?</string>
    <string name="all_unsaved_data_will_be_lost">All unsaved data will be lost!</string>
    <string name="complete_answer">Complete</string>
    <string name="cancel_answer">Cancel</string>
    <string name="playlist_">Playlist</string>
    <string name="_created">created.</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="track_already_added">The track has already been added to the playlist</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="share">Share</string>
    <string name="edit_information">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="do_you_want_to_delete_the_track">Do you want to delete the track?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_delete_the_playlist">Do you want to delete the playlist?</string>
    <string name="share_the_playlist">Share the playlist</string>
    <string name="playlist_does_not_have_a_track_list">This playlist does not have a shareable track list</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="playlist_updated">Playlist "%s" is updated</string>
    <string name="playlist_is_empty">There are no tracks in this playlist</string>
</resources>