<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            style="@style/ButtonBackStyle" />

        <TextView
            style="@style/ScreenTitleStyle"
            android:layout_marginStart="@dimen/margin_12"
            android:text="@string/search" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints="search"
            android:background="@drawable/edit_text_search_field"
            android:drawableStart="@drawable/search_icon_16dp"
            android:drawablePadding="4dp"
            android:drawableTint="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/PM_black"
            android:textColorHint="?attr/android:textColorHint"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/clear_input_field"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingEnd="28dp"
            android:src="@drawable/clear_icon_16dp"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/no_results"
        style="@style/placeholderLayoutStyle">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_results"
            android:contentDescription="@string/no_results"/>

        <TextView
            style="@style/placeholderTextStyle"
            android:text="@string/nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet"
        style="@style/placeholderLayoutStyle"
        android:layout_marginHorizontal="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_internet"
            android:contentDescription="@string/no_internet_content_description"/>

        <TextView
            style="@style/placeholderTextStyle"
            android:text="@string/no_internet" />

        <Button
            android:id="@+id/button_refresh"
            android:layout_margin="24dp"
            android:background="@drawable/button_refresh"
            android:text="@string/refresh"
            style="@style/RefreshClearButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_history"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/search_history"
            android:textSize="19sp"
            android:textFontWeight="500"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_clear_history"
            android:layout_margin="24dp"
            android:background="@drawable/button_refresh"
            android:text="@string/clear_history"
            style="@style/RefreshClearButton"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
</LinearLayout>