<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/placeholder"
        style="@style/placeholderLayoutStyle"
        android:visibility="visible"
        android:layout_marginHorizontal="24dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_new_playlist"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_refresh"
            android:text="@string/new_playlist"
            style="@style/RefreshClearButton"
            android:layout_marginVertical="46dp"/>

        <ImageView
            android:layout_marginTop="46dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_results"
            android:contentDescription="@string/no_results"/>

        <TextView
            android:layout_marginVertical="16dp"
            style="@style/placeholderTextStyle"
            android:text="@string/no_playlists" />
    </LinearLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/existing_playlists"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical" />-->
</FrameLayout>