<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_block"
        android:paddingStart="@dimen/margin_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/settings"
            android:textColor="@color/content_light_mode"
            android:textSize="@dimen/text_size_22" />
    </FrameLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_settings_button"
        android:layout_gravity="center_vertical|start"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:minWidth="@dimen/height_of_settings_button"
        android:minHeight="@dimen/height_of_settings_button"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="18dp"
        android:text="@string/night_mode"
        android:textColor="@color/content_light_mode"
        android:textSize="@dimen/text_size_16"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_settings_button"
        android:layout_gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_12"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/content_light_mode"
        android:textSize="@dimen/text_size_16"
        app:icon="@drawable/share_light_mode"
        app:iconGravity="end"
        app:iconTint="@color/gray" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_settings_button"
        android:layout_gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_12"
        android:text="@string/write_to_support"
        android:textAllCaps="false"
        android:textColor="@color/content_light_mode"
        android:textSize="@dimen/text_size_16"
        app:icon="@drawable/support_light_mode"
        app:iconGravity="end"
        app:iconTint="@color/gray" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_settings_button"
        android:layout_gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_12"
        android:text="@string/user_agreement"
        android:textAllCaps="false"
        android:textColor="@color/content_light_mode"
        android:textSize="@dimen/text_size_16"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <!--вижу, что в макете дизайнера установлена высота для этого блока равная 56,
        однако если выставить такую высоту, текст перестает быть видимым -->

        <Button
            android:id="@+id/button_search_settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/content_light_mode"
            android:textSize="@dimen/text_size_12"
            app:icon="@drawable/search_inactive_light_mode"
            app:iconGravity="top"
            app:iconTint="@color/content_light_mode"/>

        <Button
            android:id="@+id/button_library_settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/content_light_mode"
            android:textSize="@dimen/text_size_12"
            app:icon="@drawable/library_inactive_light_mode"
            app:iconGravity="top"
            app:iconTint="@color/content_light_mode" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/background_main_screen"
            android:textSize="@dimen/text_size_12"
            app:icon="@drawable/settings_inactive_light_mode"
            app:iconGravity="top"
            app:iconTint="@color/background_main_screen" />
    </LinearLayout>

</LinearLayout>
