<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imAlbumCard"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/album_cover"
            android:src="@drawable/album_card_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSongName"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaame"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="1dp">

                <TextView
                    android:id="@+id/tvBandName"
                    android:layout_width="0dp"
                    android:layout_height="13dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="baaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaand"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textSize="11sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/dot"
                    android:contentDescription="@string/dot_separator"/>

                <TextView
                    android:id="@+id/tvSongDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="13dp"
                    tools:text="time"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow_forward"
            android:src="@drawable/arrow_forward_icon_24dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
